fix wiki clicking on mobiles

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -1,8 +1,17 @@
 .pc-brawl-grid {
     gap: 1px;
     background-color: rgb(212 212 216);
-    
+
     .grid-item {
         @apply bg-content1;
+    }
+}
+
+.pc-listbox-reset {
+    padding: 0px !important;
+    width: unset;
+
+    ul {
+        gap: 0px !important;
     }
 }
